# indo-weather-etl

./: .env.example  .gitignore  README.md  pyproject.toml
adm4_codes/: jawa_barat.csv
src/: main.py
src/core/: exceptions.py  extract.py  load.py  runner.py  transform.py  utils.py
src/core/etl/: transform.py
src/core/models/: contexts.py  domain_model.py  protocols.py  raw_model.py
tests/: paths.py  test_extractor.py  test_helpers.py  test_loader.py  test_runner.py  test_transformer.py  test_utils.py
tests/mock_class/: mock_extract.py
tests/mock_data/: mock_adm4_codes.csv  mock_flattened_data.py  mock_forecast_data.py  mock_not_a_csv.txt
