[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indo-weather-etl"
version = "0.0.1"
requires-python = ">=3.10"

dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.50"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest_asyncio>=1.3.0",
    "mypy>=2.1.0",
]

[project.scripts]
weather = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true